# bare-svg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.c  index.js  package.json  test.js
.github/workflows/: prebuild.yml  test.yml
